# computational_physics_isp

./: CNAME  README.md  _config.yml  environment.yml  helloworld  index.html  nbody.md  script.js  styles.css
fem_1d_benchmark/: Makefile  README.md  build.sh  fem_reference.py  fortran_debug.py  slurm-1795209.out
fem_1d_benchmark/benchmark/: benchmark.py  benchmark_all.py  visualize.py
fem_1d_benchmark/c/: fem_assembly.c
fem_1d_benchmark/cpp/: fem_assembly.cpp
fem_1d_benchmark/fortran/: fem_assembly.f90
fem_1d_benchmark/julia/: fem_assembly.jl  fem_julia.py
fem_1d_benchmark/python/: fem_reference.py
fem_1d_benchmark/rust/: Cargo.toml
fem_1d_benchmark/rust/src/: lib.rs
fem_1d_benchmark/web/: fem_1d_benchmark_project.md
learning_fortran/: helloworld.f90
nbody_comparison/: README.md
nbody_comparison/docs/: results.md  theory.md
nbody_comparison/nbody/benchmark/: analyze_benchmarks.py  benchmark.py  test_fortran.py  visualize.py
nbody_comparison/nbody/rust/: Cargo.toml  nbody_rust_wrapper.py
nbody_comparison/nbody/rust/src/: lib.rs
nbody_comparison/tests/: test_accuracy.py
nbody_comparison/web/: index.html  index.md
textbook_notes/: README.md
textbook_notes/chapter_0/: exercises-1.md  notes-1.md  sobolev_fem_foundations.md
textbook_notes/chapter_3/: ex_10_triangle.js  ex_14_nonconforming.js  ex_19_lagrange.js  ex_9_rectangle.js  exercises.md
textbook_notes/chapter_4/: chapter_4_exercises.md  chapter_4_notes.md  ex_10_angle_checker.js  ex_11_reference_triangle.js  ex_17_condition_number.js  ex_21_quad_mapping.js  ex_5_homogeneity.js
(+21 files in other folders)
