[package]
name = "nbody_rust_module"
version = "0.1.0"
edition = "2021"

[lib]
name = "nbody_rust_module"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
numpy = "0.20"
rayon = "1.10"  # ADD THIS LINE

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1